recovered changes for offline transfer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             </intent-filter>
         </activity>
 
+        <service
+            android:name="com.utaustin.ard.network.OfflineTransferService"
+            android:enabled="true" />
+
     </application>
 
 </manifest>
