--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
             </intent-filter>
         </activity>
 
+        <service android:name=".services.VADService" />
     </application>
 
 </manifest>
